feat(entity)!: one endpoint for entity bulk creation and deletion (#90)
* feat(entity): one entity bulk endpoint for creation and deletion

* refactor(entity): according to pr
