# openapi3.yaml
@@ -29,39 +29,21 @@ paths:
           $ref: '#/components/responses/UnexpectedError'
   /entity/bulk:
     post:
-      operationId: add-bulk-entities
-      summary: Add multiple entities in a bulk operation
+      operationId: add-or-delete-bulk-entities
+      summary: Entity bulk operation
       tags:
         - entity
       requestBody:
+        required: true
         content:
           application/json:
             schema:
-              $ref: '#/components/schemas/Entities'
+              oneOf:
+                - $ref: '#/components/schemas/BulkCreateRequest'
+                - $ref: '#/components/schemas/BulkDeleteRequest'
       responses:
-        '201':
-          description: Created
-        '400':
-          $ref: '#/components/responses/BadRequest'
-        '422':
-          $ref: '#/components/responses/UnprocessableEntity'
-        5XX:
-          $ref: '#/components/responses/UnexpectedError'
-    delete:
-      operationId: delete-bulk-entities
-      summary: Delete multiple entities in a bulk operation
-      tags:
-        - entity
-      requestBody:
-        content:
-          application/json:
-            schema:
-              type: array
-              items:
-                $ref: '#/components/schemas/ExternalId'
-      responses:
-        '201':
-          description: Created
+        '200':
+          description: Operation was successful
         '400':
           $ref: '#/components/responses/BadRequest'
         '422':
@@ -170,7 +152,33 @@ components:
           $ref: '#/components/schemas/ExternalId'
         osmId:
           $ref: '#/components/schemas/OsmId'
-    Entities:
-      type: array
-      items:
-        $ref: '#/components/schemas/Entity'
+    BulkDeleteRequest:
+      type: object
+      required:
+        - action
+        - payload
+      properties:
+        action:
+          type: string
+          enum:
+            - delete
+        payload:
+          type: array
+          minItems: 1
+          items:
+            $ref: '#/components/schemas/ExternalId'
+    BulkCreateRequest:
+      type: object
+      required:
+        - action
+        - payload
+      properties:
+        action:
+          type: string
+          enum:
+            - create
+        payload:
+          type: array
+          minItems: 1
+          items:
+            $ref: '#/components/schemas/Entity'
