# src/entity/controllers/entityController.ts
@@ -1,10 +1,10 @@
 import { Logger } from '@map-colonies/js-logger';
 import { RequestHandler } from 'express';
-import httpStatus from 'http-status-codes';
+import httpStatus, { StatusCodes } from 'http-status-codes';
 import { injectable, inject } from 'tsyringe';
 import { Services } from '../../common/constants';
 import { HttpError, NotFoundError } from '../../common/errors';
-import { Entity } from '../models/entity';
+import { Entity, IEntity } from '../models/entity';
 import { EntityManager } from '../models/entityManager';
 import { EntityNotFoundError, IdAlreadyExistsError } from '../models/errors';
 
@@ -12,9 +12,27 @@ interface EntityParams {
   externalId: string;
 }
 
+enum BulkActions {
+  CREATE = 'create',
+  DELETE = 'delete',
+}
+
+interface BulkCreateRequestBody {
+  action: BulkActions.CREATE;
+  payload: IEntity[];
+}
+
+interface BulkDeleteRequestBody {
+  action: BulkActions.DELETE;
+  payload: string[];
+}
+
+type BulkRequestBody = BulkCreateRequestBody | BulkDeleteRequestBody;
+
 type GetEntityHandler = RequestHandler<EntityParams, Entity | string>;
+type PostEntityHandler = RequestHandler<undefined, undefined, IEntity>;
+type PostBulkEntitiesHandler = RequestHandler<undefined, undefined, BulkRequestBody>;
 type DeleteEntityHandler = RequestHandler<EntityParams>;
-type DeleteManyEntityHandler = RequestHandler<undefined, undefined, string[]>;
 @injectable()
 export class EntityController {
   public constructor(@inject(EntityManager) private readonly manager: EntityManager, @inject(Services.LOGGER) private readonly logger: Logger) {}
@@ -42,7 +60,7 @@ export class EntityController {
     return res.status(httpStatus.OK).json(entity);
   };
 
-  public post: RequestHandler = async (req, res, next) => {
+  public post: PostEntityHandler = async (req, res, next) => {
     try {
       await this.manager.createEntity(req.body);
     } catch (error) {
@@ -54,16 +72,22 @@ export class EntityController {
     return res.sendStatus(httpStatus.CREATED);
   };
 
-  public postMany: RequestHandler = async (req, res, next) => {
+  public postBulk: PostBulkEntitiesHandler = async (req, res, next) => {
     try {
-      await this.manager.createEntities(req.body);
+      if (req.body.action === BulkActions.CREATE) {
+        await this.manager.createEntities(req.body.payload);
+      } else {
+        await this.manager.deleteEntities(req.body.payload);
+      }
     } catch (error) {
       if (error instanceof IdAlreadyExistsError) {
         (error as HttpError).status = httpStatus.UNPROCESSABLE_ENTITY;
+      } else if (error instanceof EntityNotFoundError) {
+        (error as HttpError).status = httpStatus.NOT_FOUND;
       }
       return next(error);
     }
-    return res.sendStatus(httpStatus.CREATED);
+    return res.sendStatus(StatusCodes.OK);
   };
 
   public delete: DeleteEntityHandler = async (req, res, next) => {
@@ -71,19 +95,6 @@ export class EntityController {
 
     try {
       await this.manager.deleteEntity(externalId);
-    } catch (error) {
-      if (error instanceof EntityNotFoundError) {
-        (error as HttpError).status = httpStatus.NOT_FOUND;
-      }
-      return next(error);
-    }
-
-    res.sendStatus(httpStatus.NO_CONTENT);
-  };
-
-  public deleteMany: DeleteManyEntityHandler = async (req, res, next) => {
-    try {
-      await this.manager.deleteEntities(req.body);
     } catch (error) {
       if (error instanceof EntityNotFoundError) {
         (error as HttpError).status = httpStatus.NOT_FOUND;
